# collision_cpp

./: CMakeLists.txt  main  main.cpp  run.sh  vegas_tests.nb
include/: abscissa.hpp  amp.hpp  ampmassless.hpp  integration_methods.hpp  mymath.hpp  utils.hpp
sources/: CMakeLists.txt  amp.cpp  amp2.cpp  ampmassless.cpp  mymath.cpp  utils.cpp
